# hunter-example

./: .gitignore
ios/: CMakeLists.txt  HEAppDelegate.h  HEAppDelegate.mm  Info.plist  README.md  main.m
ios/Assets/: Log.txt
mac/: CMakeLists.txt  HEAppDelegate.h  HEAppDelegate.mm  README.md  main.m
mac/Assets/: ErrorLog.txt  ErrorLog1.txt
mac/English.lproj/: InfoPlist.strings  MainMenu.xib
